--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "recoil": "^0.7.7",
+    "sass": "^1.79.3",
+    "scss": "^0.2.4"
+  },
+  "devDependencies": {
+    "@types/node": "22.7.2",
+    "@types/react": "18.3.9",
+    "typescript": "5.6.2"
   }
 }
